# moscow_travel_hack_ecom_240323

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-infra.yaml  docker-compose-nossl.yaml  docker-compose.yaml
backend/: events.json  gigachain.ipynb  main.ipynb  pyproject.toml  run.sh  tracks.json  web_entrypoint.py
backend/ml/: classify_event_type.py  configs.py  helper.py  retrieval_manager.py  search_results_handler.py  summarizer.py
backend/ml/data/: gigachain.ipynb  pyproject.toml  with_locations.json  with_reviews.json
backend/ml/prompts/: akinator_continue_system.yaml  akinator_system.yaml  generate_reviews.yaml  push_notification_system.yaml  search_qna_system.yaml  summarize_combine_system.yaml  summarize_map_system.yaml  zeroshot_classification_system.yaml
backend/persistence/: database.py
backend/presentation/web/: event_router.py  examples.py  gigachat_router.py  health_router.py  main.py  schemas.py
backend/repository/: pg_repository.py  redis_repository.py
backend/schemas/: base.py  event.py  message.py
backend/service/: chat_service.py  event_service.py  heath_service.py
backend/shared/: containers.py  settings.py
backend/supplier/: gigachat_supplier.py
backend/tests/: integration_test.py
docs/: arch.drawio
extra/: init.sql
frontend/: .eslintrc.json  .prettierrc.json  .stylelintcache  Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
frontend/assets/: index-Ydq3v4KZ.js
frontend/src/: declaration.d.ts  index.scss  index.tsx  parser.ts  types.ts
frontend/src/Pages/Main/: Main.module.scss  index.tsx
frontend/src/Pages/Track/: index.tsx  styles.module.scss
frontend/src/components/Card/: Card.module.scss  index.tsx
frontend/src/models/: backend.ts  frontend.ts
frontend/src/static/Footer/: index.tsx
frontend/src/variables/: index.scss
ml/: gigachain.ipynb  pyproject.toml  with_locations.json  with_reviews.json
ml/src/mthe_ml/: classify_event_type.py  configs.py  helper.py  retrieval_manager.py  search_results_handler.py  summarizer.py
ml/src/mthe_ml/prompts/: generate_questions.yaml  search_system.yaml  summarize_combine_system.yaml  summarize_map_system.yaml  zeroshot_classification_system.yaml
volumes/nginx/: raw_nginx.conf  ssl_nginx.conf
(+26 files in other folders)
