[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mthe_ml", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
gigachain = "^0.1.13.2"
gigachat = "^0.1.22"
pydantic-settings = "^2.2.1"
sentence-transformers = "^2.6.1"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.5"
tiktoken = "^0.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
